--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
         cursor: url(./farmer_left/frame_0_delay-0.1s.png), auto;
         -webkit-animation: cursor 400ms infinite;
         animation: cursor 400ms infinite;
-      }
+    }
       
-      @-webkit-keyframes cursor {
+    @-webkit-keyframes cursor {
         0% {cursor: url(./farmer_left/frame_0_delay-0.1s.png), auto;}
         33% {cursor: url(./farmer_left/frame_1_delay-0.1s.png), auto;}
         66% {cursor: url(./farmer_left/frame_2_delay-0.1s.png), auto;}
         100% {cursor: url(./farmer_left/frame_3_delay-0.1s.png), auto;}
-      } 
+    } 
       
-      @keyframes cursor {
+    @keyframes cursor {
         0% {cursor: url(./farmer_left/frame_0_delay-0.1s.png), auto;}
         33% {cursor: url(./farmer_left/frame_1_delay-0.1s.png), auto;}
         66% {cursor: url(./farmer_left/frame_2_delay-0.1s.png), auto;}
         100% {cursor: url(./farmer_left/frame_3_delay-0.1s.png), auto;}
-      } 
+    } 
+    @font-face {
+        font-family: 'HumanoidStraight'; 
+        src: url('humanoidstraight-webfont.woff') format('woff'); 
+    }
+    h1 {
+         font-family: HumanoidStraight, san-serif; 
+    }
 </style>
 
 <div class "container">
