--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     html, body {
         margin: 0 !important;
         padding: 0 !important;
+        overflow: hidden;
     }
     * {
         -webkit-animation: cursor 400ms infinite;
@@ -44,6 +45,7 @@
     h1 {
          font-family: HumanoidStraight; 
     }
+    
 </style>
 
 <div class "container" id="container">
