--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     }
       
     @-webkit-keyframes cursor {
-        0% {cursor: url("./farmer_left/frame_0.png"), auto;}
-        33% {cursor: url("./farmer_left/frame_1.png"), auto;}
-        66% {cursor: url("./farmer_left/frame_2.png"), auto;}
-        100% {cursor: url("./farmer_left/frame_3.png"), auto;}
+        0% {cursor: url("./farmer_left/frame_0.png") 35 35, auto;}
+        33% {cursor: url("./farmer_left/frame_1.png") 35 35, auto;}
+        66% {cursor: url("./farmer_left/frame_2.png") 35 35, auto;}
+        100% {cursor: url("./farmer_left/frame_3.png") 35 35, auto;}
     } 
 /*       
     {% comment %} @keyframes cursor {
