--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 </div>
 
 <img id="duck-wink", style="width: 50px; position: absolute;z-index:100;", src="duck_wink.gif" hidden>
-<img id="duck-u-text", style="width: 300px; position: absolute;", src="text-duck-u.png" hidden>
-<img id="text-noob", style="width: 100px; position: absolute;", src="text-noob.png" hidden>
-<img id="text-hehe", style="width: 100px; position: absolute;", src="text-hehe.png" hidden>
-<img id="text-haha", style="width: 100px; position: absolute;", src="text-haha.png" hidden>
-<img id="text-loser", style="width: 100px; position: absolute;", src="text-loser.png" hidden>
+<img id="duck-u-text", style="width: 300px; position: absolute;z-index:100;", src="text-duck-u.png" hidden>
+<img id="text-noob", style="width: 100px; position: absolute;z-index:100;", src="text-noob.png" hidden>
+<img id="text-hehe", style="width: 100px; position: absolute;z-index:100;", src="text-hehe.png" hidden>
+<img id="text-haha", style="width: 100px; position: absolute;z-index:100;", src="text-haha.png" hidden>
+<img id="text-loser", style="width: 100px; position: absolute;z-index:100;", src="text-loser.png" hidden>
 
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
